<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/detailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/regNo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/details_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/regNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bday"
        android:layout_alignLeft="@+id/bday"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/reg_hint"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/rememberOpts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/getBunkButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/save_details_checkbox_text" />

    <EditText
        android:id="@+id/bday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rememberOpts"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/bday_hint"
        android:inputType="date" />

    <Button
        android:id="@+id/getBunkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:gravity="center"
        android:text="@string/get_Button_Text" />

</RelativeLayout>