<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/writtenby"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="14dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:autoLink="all"
            android:linksClickable="true"
            android:gravity="center"
            android:padding="14dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:padding="14dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/libs"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:padding="14dp"
            android:text="@string/libs_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/Comments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:padding="14dp"
            android:text="@string/comments_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/Source"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:padding="14dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/thanks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:padding="14dp"
            android:text="@string/thanks_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>